# tabletop-game

./: .gitignore  CMakeLists.txt  build.bat
gui/: CMakeLists.txt
gui/assets/fonts/knight-vision-font/: info.txt
gui/include/gui/: AnimatedCharacter.h  AnimatedSpell.h  AnimatedSprite.h  GameEnvironment.h  MapLayer.h  UiLayer.h
gui/maps/: README.txt  sampleMap.csv
gui/src/: AnimatedCharacter.cpp  AnimatedSpell.cpp  AnimatedSprite.cpp  MapLayer.cpp  UiLayer.cpp  main.cpp
helpers/: CMakeLists.txt
helpers/include/helpers/: CsvReader.h  DrawableTiledMap.h  MathHelpers.h
helpers/src/: CsvReader.cpp  DrawableTileMap.cpp  MathHelpers.cpp
